--- a/app/src/main/res/layout/container2_fragment.xml
+++ b/app/src/main/res/layout/container2_fragment.xml
@@ -16,7 +16,7 @@
             android:id="@+id/c2t"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@={containerData.name}"
+            android:text="@{containerData.name}"
             android:layout_gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
