--- a/app/src/main/res/layout/container2_fragment.xml
+++ b/app/src/main/res/layout/container2_fragment.xml
@@ -12,6 +12,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <Button
+            android:id="@+id/start_blank"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Start Blank Activity"/>
+
         <TextView
             android:id="@+id/c2t"
             android:layout_width="wrap_content"
