--- a/app/src/main/res/layout/blank_activity.xml
+++ b/app/src/main/res/layout/blank_activity.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     android:id="@+id/blank_coordinator_layout"
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    android:layout_height="20dp">
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
