--- a/app/src/main/res/layout/pop_container.xml
+++ b/app/src/main/res/layout/pop_container.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="60dp"
+    android:background="@color/cardview_dark_background">
 
     <TextView
-        android:id="@+id/c3t"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="C3"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/pop_container_text"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:text="xxxxxxxxxxxxxx"
+        android:textColor="@color/design_default_color_on_primary"
+        android:layout_gravity="center"
+        android:gravity="center"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
